<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_cat_general_title">
        <ListPreference
            android:defaultValue="@string/pref_price_group_default"
            android:entries="@array/pref_price_group_entries"
            android:entryValues="@array/pref_price_group_values"
            android:key="price_group"
            android:negativeButtonText="@string/button_cancel"
            android:summary="%s"
            android:title="@string/pref_price_group_title"/>
        <ListPreference
            android:defaultValue="@string/pref_default_place_default"
            android:entries="@array/places"
            android:entryValues="@array/pref_default_place_values"
            android:key="default_place"
            android:negativeButtonText="@string/button_cancel"
            android:summary="%s"
            android:title="@string/pref_default_place_title"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_cat_developer_title">
        <Preference
            android:key="licenses"
            android:summary="@string/pref_licenses_summary"
            android:title="@string/pref_licenses"/>
        <Preference
            android:key="version"
            android:title="@string/pref_app_version"/>
        <Preference
            android:key="build_time"
            android:title="@string/pref_app_build_time"/>
        <Preference
            android:key="feedback"
            android:title="@string/action_feedback"/>
    </PreferenceCategory>
</PreferenceScreen>