<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_today"
        android:title="@string/action_today"
        android:icon="@drawable/ic_action_go_to_today"
        yourapp:showAsAction="always" />
    <item android:id="@+id/action_info"
        android:title="@string/action_info"
        android:icon="@drawable/ic_action_info"
        yourapp:showAsAction="always" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_settings"
        yourapp:showAsAction="ifRoom" />
    <item android:id="@+id/action_feedback"
        android:title="@string/action_feedback"
        yourapp:showAsAction="never" />
</menu>
