<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_window_background"
    android:clipToPadding="false"
    android:scrollbarStyle="outsideOverlay"
    tools:context=".MealPreviewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            style="@style/Widget.AppTheme.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <com.arcao.menza.widget.CardHeaderTextView
                    style="@style/Widget.AppTheme.CardView.Header.First"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            style="@style/Widget.AppTheme.CardView.Label.Price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/price_student"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/priceStudent"
                                style="@style/Widget.AppTheme.CardView.Value.Price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="0"/>

                            <TextView
                                style="@style/Widget.AppTheme.CardView.Value.Price.Suffix"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/price_suffix"/>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            style="@style/Widget.AppTheme.CardView.Label.Price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/price_staff"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/priceStaff"
                                style="@style/Widget.AppTheme.CardView.Value.Price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="0"/>

                            <TextView
                                style="@style/Widget.AppTheme.CardView.Value.Price.Suffix"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/price_suffix"/>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            style="@style/Widget.AppTheme.CardView.Label.Price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/price_external"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/priceExternal"
                                style="@style/Widget.AppTheme.CardView.Value.Price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="0"/>

                            <TextView
                                style="@style/Widget.AppTheme.CardView.Value.Price.Suffix"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/price_suffix"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/Widget.AppTheme.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <com.arcao.menza.widget.CardHeaderTextView
                    style="@style/Widget.AppTheme.CardView.Header.First"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/header_rating"/>

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@style/Widget.AppTheme.RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/Widget.AppTheme.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <com.arcao.menza.widget.CardHeaderTextView
                    style="@style/Widget.AppTheme.CardView.Header.First"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/header_allergens"/>

                <LinearLayout
                    android:id="@+id/alergens_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/no_allergens"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>